<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="200dp"
            android:layout_marginTop="40dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/nameOfAddingAuto"
                android:hint="@string/name"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp" />
            <EditText
                android:id="@+id/modificationOfAddingAuto"
                android:hint="@string/modification"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp" />
            <EditText
                android:id="@+id/powerOfAddingAuto"
                android:hint="@string/power"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp" />
            <EditText
                android:id="@+id/weightOfAddingAuto"
                android:hint="@string/weight"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/photoOfAddingAuto"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_add_photo_auto_foreground"/>
                <TextView
                    android:id="@+id/pathOfPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1" />
            </LinearLayout>
            <Button
                android:id="@+id/addAuto"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:text="@string/add_auto" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
